--- a/paper/final/section/eval.tex
+++ b/paper/final/section/eval.tex
@@ -223,7 +223,7 @@ software.
 
 HAProxy is a popular, production-grade software load-balancer, widely adopted in
 large applications, including Airbnb, DISQUS, Fedora, GitHub, Instagram, and
-Reddit \cite{haproxy-they-use-it}. In this evaluation, we try to apply our
+Reddit~\cite{haproxy-they-use-it}. In this evaluation, we try to apply our
 approach on the past 7 stable releases of HAProxy, and attempt to make the
 symbolic execution engine reach the state at the \texttt{accept} function call
 as the first step. However, as shown in Table \ref{perf-haproxy}, the results
