Finish background section

--- a/paper/final/report.tex
+++ b/paper/final/report.tex
@@ -125,8 +125,8 @@ University of Illinois at Urbana-Champaign
     to formulate the mapping between the inputs and outputs of such network
     function programs. We tested our approach on an example load balancer that
     we implemented, and the result shows that it is possible to get an accurate
-    model within reasonable resource consumption using binary analysis, despite
-    some limitations of the method.
+    model within reasonable resource consumption using binary analysis. Finally
+    we describe some limitations of the method.
 
 \end{abstract}
 
