--- a/paper/final/report.bib
+++ b/paper/final/report.bib
@@ -1,5 +1,21 @@
 % Encoding: UTF-8
 
+@inproceedings{z3,
+  author = {De Moura, Leonardo and Bj{\o}rner, Nikolaj},
+  title = {Z3: An Efficient SMT Solver},
+  booktitle = {Proceedings of the Theory and Practice of Software, 14th International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+  series = {TACAS'08/ETAPS'08},
+  year = {2008},
+  isbn = {3-540-78799-2, 978-3-540-78799-0},
+  location = {Budapest, Hungary},
+  pages = {337--340},
+  numpages = {4},
+  url = {http://dl.acm.org/citation.cfm?id=1792734.1792766},
+  acmid = {1792766},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+}
+
 @misc{haproxy-they-use-it,
   title = {{HAProxy} - They use it!},
   howpublished = {\url{https://www.haproxy.org/they-use-it.html}},
